[workspace]
members = [
  "util",
  "day01-1",
  "day01-2",
  "day02-1",
  "day02-2",
  "day03-1",
  "day04-1",
  "day04-2",
  "day05-1",
  "day06-1",
  "day06-2",
  "day07-1",
  "day07-2",
  "day08-1",
  "day08-2",
  "day09-1",
  "day09-2",
  "day11-1",
  "day11-2",
  "day13-1",
  "day15-1",
  "day15-2",
  "day16-1",
  "day16-2",
]
resolver = "2"

[workspace.dependencies]
util = { path = "./util" }
